Re-add emptyList, emptySet and emptyMap templates